rust_ffi/c_libs/math.h

int sum(int a, int b);
int diff(int a, int b);
int prod(int a, int b);
int quot(int a, int b);